--- a/homepage.html
+++ b/homepage.html
@@ -62,7 +62,7 @@
                       Hi, I'm <a class="bem-link" href="./about.html"><b>Norbert Szivak</b></a>, a university student, and beginner programmer.
                     </h1>
                   </div>
-                  <a class="video-leiras" href="./xhtml_en.html">Longer description of the video.</a>
+                  <a class="video-leiras" href="./xhtml_en.xhtml">Longer description of the video.</a>
                 </div><div class="d-flex justify-content-center line-div">
                 <hr class="line">
               </div>
