--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                       Szia, <a class="bem-link" href="./rolam.html"><b>Szivák Norbert</b></a> vagyok, egyetemi hallgató, kezdő programozó.
                     </h1>
                   </div>
-                  <a class="video-leiras" href="./xhtml_hu.html">A videó hosszabb leírása.</a>
+                  <a class="video-leiras" href="./xhtml_hu.xhtml">A videó hosszabb leírása.</a>
                 </div><div class="d-flex justify-content-center line-div">
                 <hr class="line">
               </div>
