--- a/xhtml_en.xhtml
+++ b/xhtml_en.xhtml
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC>
-<html xml:lang="hu" lang="hu">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
   <title>Long video description</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-  <h1>Long video description</h1>
+<h1>Long video description</h1>
   <p>The logo was composed of two shapes similar to water drops. They are rotated to form an 'S' shape, i.e. one of the two falling drops is rotated by 90 degrees and the other by -90 degrees. In the top there is the inscription "SZIVAK". And the whole logo has a purple field pattern background. This is animated so that it "jumps in" at the beginning of the video and "jumps out" after a few seconds.
   </p>
 </body>
