--- a/xhtml_hu.xhtml
+++ b/xhtml_hu.xhtml
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC>
-<html xml:lang="hu" lang="hu">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="hu">
 <head>
   <title>Videó hosszú leírása</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
   <h1>Videó hosszú leírása</h1>
