--- a/about.html
+++ b/about.html
@@ -89,11 +89,11 @@
                   In my free time, I just studied and studied, but I felt that it would be quite difficult for me to acquire this knowledge myself.
                   <br>&emsp;That's when I decided to try university. I wrote an advanced IT final exam, which I did very well, and that year
                    I started university life at the ELTE SEK Faculty of Informatics, as a Computer Scientist.</p>
-            </article><hr class="line3">
+            </article>
           </div>
           </div>
       </div>
-      <div class="row d-flex container justify-content-center">
+      <div class="row d-flex container-fluid justify-content-center linkek-row">
         <h4>Links:</h4><br>
         <a class="rolam-links" target="_blank" href="http://www.bocskai-csokmo.edu.hu/">http://www.bocskai-csokmo.edu.hu/</a><br>
         <a class="rolam-links" target="_blank" href="https://www.google.com/maps/place/Cs%C3%B6km%C5%91">https://www.google.com/maps/place/Cs%C3%B6km%C5%91</a><br>
@@ -129,8 +129,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Pages</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Pages</h3>
+        <ul class="footer-ul">
           <li><a  href="homepage.html"><h3 class="footer-text">Homepage</h3></a></li>
           <li><a class="active"  href="about.html">About</a></li>
           <li><a  href="skills.html"><h3 class="footer-text">Skills</h3></a></li>
