--- a/educations.html
+++ b/educations.html
@@ -51,15 +51,16 @@
   
   <section id="tanulmanyaim-sec" class="tanulmanyaim-s">
    <!--ALTALANOSISKOLA-->
-    <div class="ev">
-      <h1 class="d-flex justify-content-center evszam">2008-2016</h1>
-      <div class="d-flex justify-content-center line-div">
-        <hr class="ev-line">
-      </div>
-    </div>
+    
    <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
     <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
       <article class="isk-txt">
+        <div class="ev">
+      <h1 class="d-flex justify-content-center evszam">2008-2016</h1>
+      <div class="d-flex justify-content-center line-div-tanulmany">
+        <hr class="ev-line">
+      </div>
+    </div>
         <h2 class="isk-text-h">Csökmői István Bocskai Elementary School and Elementary Art School</h2>
         <aside class="isk-text-a">I finished primary school in a quiet village in the lowlands.</aside>
       </article>
@@ -72,16 +73,17 @@
     </div>
    </div>
 
+   <hr class="container-fluid justify-content-center line3">
    <!--KOZEPISKOLA-->
-   <div class="ev">
-    <h1 class="d-flex justify-content-center evszam">2016-2021</h1>
-    <div class="d-flex justify-content-center line-div">
-      <hr class="ev-line">
-    </div>
-  </div>
  <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
   <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
     <article class="isk-txt">
+      <div class="ev">
+    <h1 class="d-flex justify-content-center evszam">2016-2021</h1>
+    <div class="d-flex justify-content-center line-div-tanulmany">
+      <hr class="ev-line">
+    </div>
+  </div>
       <h2 class="isk-text-h">Kőszeg Evangelical High School, Technical Middle School, Vocational Training School and College</h2>
       <aside class="isk-text-a">As soon as I left primary school, we moved to Western Hungary, Kőszeg. And here I went to vocational high school, where I obtained the profession of logistics administrator.</aside>
     </article>
@@ -94,17 +96,17 @@
   </div>
  </div>
   
-
+ <hr class="container-fluid justify-content-center line3">
   <!--EGYETEM-->
-  <div class="ev">
-    <h1 class="d-flex justify-content-center evszam">2022-</h1>
-    <div class="d-flex justify-content-center line-div">
-      <hr class="ev-line">
-    </div>
-  </div>
  <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
   <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
     <article class="isk-txt">
+      <div class="ev">
+    <h1 class="d-flex justify-content-center evszam">2022-</h1>
+    <div class="d-flex justify-content-center line-div-tanulmany">
+      <hr class="ev-line">
+    </div>
+  </div>
       <h2 class="isk-text-h">Lóránd Eötvös University Savaria University Center</h2>
       <aside class="isk-text-a">In September 2022, I started my studies at the ELTE SEK Faculty of Informatics, Computer Science bachelor's degree.</aside>
     </article>
@@ -143,9 +145,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Pages</h3>
-        <ul>
-
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Pages</h3>
+        <ul class="footer-ul">
           <li><a  href="./homepage.html"><h3 class="footer-text">Homepage</h3></a></li>
           <li><a  href="./about.html"><h3 class="footer-text">About</h3></a></li>
           <li><a  href="./skills.html"><h3 class="footer-text">Skills</h3></a></li>
