--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!--LOGO,SZOVEG-->
             <section id="fooldal-sec" class="fooldal-s">
               <div class="container">
-                <div class="row align-items-center text-white">
+                <div class="row d-flex justify-content-between text-white">
                   <div class="col-md-6 d-flex justify-content-center logo">
                     <video class="video" width="320" height="240" title="Egy Szivak feliratú logó animációja látható, mely a videó elején beugrik, majd a végén pedig ki." controls autoplay muted loop poster="/icons/logokicsi.png">
                       <source src="icons/logovideo.mp4" type="video/mp4">
@@ -61,7 +61,7 @@
                   </div>
                   <div class="col-md-6 d-flex justify-content-center bemutatkozas">
                     <h1 class="display-2">
-                      Szia, <a class="bem-link" href="./rolam.html"><b>Szivák Norbert</b></a> vagyok, egyetemi hallgató, kezdő programozó.
+                      Szia, <a class="bem-link" href="./rolam.html"><b>Szivák Norbert</b></a> vagyok, kezdő programozó, egyetemi hallgató az ELTE-n.
                     </h1>
                   </div>
                   <a class="video-leiras" href="./xhtml_hu.xhtml">A videó hosszabb leírása.</a>
@@ -69,7 +69,7 @@
                 <hr class="line">
               </div>
               <div class="d-flex justify-content-center line-text-div">
-              <h2 class="line-text">Ez az első weboldalam, nézz körül!</h2> 
+              <h2 class="line-text">Ez az első weboldalam, nézz körül! Ha szeretnél kapcsolatba lépni velem, kapcsolat menüpontban megtalálod az elérhetőségeimet.</h2> 
             </div>
           </div>
             <div class="d-flex justify-content-center line-div">
@@ -81,7 +81,7 @@
             <footer class="footer">
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-4 col-lg-4 socials-box"><h3 class="footer-text">Közösségi oldalaim</h3>
+                  <div class="col-lg-4 socials-box"><h3 class="footer-text">Közösségi oldalaim</h3>
                     <div class="container-fluid d-flex gap-2 socials-logos">
                       <a target="_blank" href="https://github.com/SzivakNorbert"><img src="icons/github.png"  width="30" alt="github ikon"></a>
                       <a target="_blank" href="https://linkedin.com/in/szivaknorbi"><img src="icons/linkedin.png" width="30" alt="linkedin ikon"></a>
@@ -102,8 +102,8 @@
                     <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
                   </div>
                   </div>
-                  <div class="col-md-4 pages"><h3 class="footer-text">Oldalak</h3>
-                    <ul>
+                  <div class="col-md-4 pages"><h3 class="footer-text-pages">Oldalak</h3>
+                    <ul class="footer-ul">
                       <li><a class="active" href="./index.html">Főoldal</a></li>
                       <li><a  href="./rolam.html"><h3 class="footer-text">Rólam</h3></a></li>
                       <li><a  href="./keszsegeim.html"><h3 class="footer-text">Készségeim</h3></a></li>
