--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -150,8 +150,8 @@
   <div class="col-3 d-none d-lg-block"></div>
   <div class="col-6 container">
 <div class="d-flex justify-content-around">
-  <input class="btn btn-secondary " type="reset" id="rest" value="Törlés">
-  <input class="btn btn-primary " type="submit" id="submit" onclick="saveData()" value="Küldés">
+  <input class="btn btn-secondary btn-lg" type="reset" id="rest" value="Törlés">
+  <input class="btn btn-primary btn-lg" type="submit" id="submit" onclick="saveData()" value="Küldés">
 </div>
 </div>
 <div class="col-3 d-none d-lg-block"></div>
@@ -177,7 +177,7 @@
   </div>
   <h3 class="social-text">Ha kézzel írt levelet szeretnél küldeni nekem, ezt is megteheted. Erre a címre tudod postázni.</h3>
   <div class="row container-fluid justify-content-center level-row">
-    <div class="col-5 d-flex justify-content-around align-items-center"><img class="contact-icon-mail" src="/icons/mail.png" width="55" alt="postaláda ikon"></div>
+    <div class="col-5 d-flex justify-content-around align-items-center"><img class="contact-icon-mail" src="/icons/mail.png" width="75" alt="postaláda ikon"></div>
     <div class="col-1 d-flex justify-content-center ">
       <div class="vr"></div>
     </div>
@@ -214,8 +214,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Oldalak</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Oldalak</h3>
+        <ul class="footer-ul">
           <li><a  href="./index.html"><h3 class="footer-text">Főoldal</h3></a></li>
           <li><a  href="./rolam.html"><h3 class="footer-text">Rólam</h3></a></li>
           <li><a  href="./keszsegeim.html"><h3 class="footer-text">Készségeim</h3></a></li>
