--- a/skills.html
+++ b/skills.html
@@ -278,8 +278,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Pages</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Pages</h3>
+        <ul class="footer-ul">
           <li><a  href="./homepage.html"><h3 class="footer-text">Homepage</h3></a></li>
           <li><a  href="./about.html"><h3 class="footer-text">About</h3></a></li>
           <li><a class="active" href="./skills.html">Skills</a></li>
