--- a/tanulmanyaim.html
+++ b/tanulmanyaim.html
@@ -50,15 +50,15 @@
   
   <section id="tanulmanyaim-sec" class="tanulmanyaim-s">
    <!--ALTALANOSISKOLA-->
-    <div class="ev">
+    
+   <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
+    <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
+      <article class="isk-txt"><div class="ev">
       <h1 class="d-flex justify-content-center evszam">2008-2016</h1>
-      <div class="d-flex justify-content-center line-div">
+      <div class="d-flex justify-content-center line-div-tanulmany">
         <hr class="ev-line">
       </div>
     </div>
-   <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
-    <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
-      <article class="isk-txt">
         <h2 class="isk-text-h">Csökmői Bocskai István Általános Iskola és Alapfokú Művészeti Iskola</h2>
         <aside class="isk-text-a">Az általános iskolát egy csendes kis alföldi faluban végeztem el.</aside>
       </article>
@@ -70,17 +70,18 @@
     </figure>
     </div>
    </div>
+   <hr class="container-fluid justify-content-center line3">
 
    <!--KOZEPISKOLA-->
-   <div class="ev">
-    <h1 class="d-flex justify-content-center evszam">2016-2021</h1>
-    <div class="d-flex justify-content-center line-div">
-      <hr class="ev-line">
-    </div>
-  </div>
  <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
   <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
     <article class="isk-txt">
+         <div class="ev">
+    <h1 class="d-flex justify-content-center evszam">2016-2021</h1>
+    <div class="d-flex justify-content-center line-div-tanulmany">
+      <hr class="ev-line">
+    </div>
+  </div>
       <h2 class="isk-text-h">Kőszegi Evangélikus Gimnázium, Technikum, Szakképző iskola és Kollégium</h2>
       <aside class="isk-text-a">Amint abbahagyatam az általános iskolát, elköltöztünk Nyugat-Magyarországra, Kőszegre. És itt jártam szakgimnáziumba, ahol logisztikai ügyintéző szakmát szereztem.</aside>
     </article>
@@ -92,18 +93,18 @@
   </figure>
   </div>
  </div>
-  
+ <hr class="container-fluid justify-content-center line3">
 
   <!--EGYETEM-->
-  <div class="ev">
-    <h1 class="d-flex justify-content-center evszam">2022-</h1>
-    <div class="d-flex justify-content-center line-div">
-      <hr class="ev-line">
-    </div>
-  </div>
  <div class="row d-flex container-fluid justify-content-center tanulmanyaim-row">
   <div class="col-lg-7 d-flex justify-content-center align-items-center tanulmanyaim-col">
     <article class="isk-txt">
+      <div class="ev">
+    <h1 class="d-flex justify-content-center evszam">2022-</h1>
+    <div class="d-flex justify-content-center line-div-tanulmany">
+      <hr class="ev-line">
+    </div>
+  </div>
       <h2 class="isk-text-h">Eötvös Lóránd Tudományegyem Savaria Egyetemi Központ</h2>
       <aside class="isk-text-a">2022 szeptemberében kezdtem meg tanulmányaimat az ELTE SEK Informatikai karán, programtervező informatikus alapképzésen.</aside>
     </article>
@@ -142,8 +143,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Oldalak</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Oldalak</h3>
+        <ul class="footer-ul">
           <li><a  href="./index.html"><h3 class="footer-text">Főoldal</h3></a></li>
           <li><a  href="./rolam.html"><h3 class="footer-text">Rólam</h3></a></li>
           <li><a  href="./keszsegeim.html"><h3 class="footer-text">Készségeim</h3></a></li>
