--- a/homepage.html
+++ b/homepage.html
@@ -50,7 +50,7 @@
   <!--LOGO,SZOVEG-->
             <section id="fooldal-sec" class="fooldal-s">
               <div class="container">
-                <div class="row align-items-center text-white">
+                <div class="row d-flex justify-content-between text-white">
                   <div class="col-md-6 d-flex justify-content-center logo">
                     <video class="video" width="320" height="240" title="An animation of a logo labeled Szivak can be seen, which jumps in at the beginning of the video and then out at the end." controls autoplay muted loop poster="/icons/logokicsi.png">
                       <source src="icons/logovideo.mp4" type="video/mp4">
@@ -59,7 +59,7 @@
                   </div>
                   <div class="col-md-6 d-flex justify-content-center bemutatkozas">
                     <h1 class="display-2">
-                      Hi, I'm <a class="bem-link" href="./about.html"><b>Norbert Szivak</b></a>, a university student, and beginner programmer.
+                      Hi, I'm <a class="bem-link" href="./about.html"><b>Norbert Szivak</b></a>, beginner programmer, university student at ELTE.
                     </h1>
                   </div>
                   <a class="video-leiras" href="./xhtml_en.xhtml">Longer description of the video.</a>
@@ -67,7 +67,7 @@
                 <hr class="line">
               </div>
               <div class="d-flex justify-content-center line-text-div">
-              <h2 class="line-text">This is my first website, look around!</h2> 
+              <h2 class="line-text">This is my first website, look around! If you want to contact me, you can find my contact information in the contact menu.</h2> 
             </div>
               </div>
               <div class="d-flex justify-content-center line-div">
@@ -79,7 +79,7 @@
             <footer class="footer">
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-md-4 col-lg-4 socials-box"><h3 class="footer-text">My social pages</h3>
+                  <div class="col-lg-4 socials-box"><h3 class="footer-text">My social pages</h3>
                     <div class="container-fluid d-flex gap-2 socials-logos">
                       <a target="_blank" href="https://github.com/SzivakNorbert"><img src="icons/github.png"  width="30" alt="github icon"></a>
                       <a target="_blank" href="https://linkedin.com/in/szivaknorbi"><img src="icons/linkedin.png" width="30" alt="linkedin icon"></a>
@@ -100,8 +100,8 @@
                     <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
                   </div>
                   </div>
-                  <div class="col-md-4 pages"><h3 class="footer-text">Pages</h3>
-                    <ul>
+                  <div class="col-md-4 pages"><h3 class="footer-text-pages">Pages</h3>
+                    <ul class="footer-ul">
                       <li><a class="active" href="./homepage.html">Homepage</a></li>
                       <li><a href="./about.html"><h3 class="footer-text">About</h3></a></li>
                       <li><a href="./skills.html"><h3 class="footer-text">Skills</h3></a></li>
