--- a/keszsegeim.html
+++ b/keszsegeim.html
@@ -283,8 +283,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Oldalak</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Oldalak</h3>
+        <ul class="footer-ul">
           <li><a  href="./index.html"><h3 class="footer-text">Főoldal</h3></a></li>
           <li><a  href="./rolam.html"><h3 class="footer-text">Rólam</h3></a></li>
           <li><a class="active" href="./keszsegeim.html">Készségeim</a></li>
