--- a/rolam.html
+++ b/rolam.html
@@ -85,7 +85,7 @@
           </div>
       </div>
     </div>
-    <div class="row d-flex container justify-content-center">
+    <div class="row d-flex container-fluid justify-content-center linkek-row">
     <h4>Linkek:</h4><br>
     <a class="rolam-links" target="_blank" href="http://www.bocskai-csokmo.edu.hu/">http://www.bocskai-csokmo.edu.hu/</a><br>
     <a class="rolam-links" target="_blank" href="https://www.google.com/maps/place/Cs%C3%B6km%C5%91">https://www.google.com/maps/place/Cs%C3%B6km%C5%91</a><br>
@@ -123,8 +123,8 @@
         <a href="tel:06203307022"><h3 class="footer-text">+36 20 330 7022</h3></a>
       </div>
       </div>
-      <div class="col-md-4 pages"><h3 class="footer-text">Oldalak</h3>
-        <ul>
+      <div class="col-md-4 pages"><h3 class="footer-text-pages">Oldalak</h3>
+        <ul class="footer-ul">
           <li><a  href="./index.html"><h3 class="footer-text">Főoldal</h3></a></li>
           <li><a class="active"  href="./rolam.html">Rólam</a></li>
           <li><a  href="./keszsegeim.html"><h3 class="footer-text">Készségeim</h3></a></li>
